log
Wed, Mar 19, 2025  8:44:01 AM: 
 tests:  1|4
total_score: 10/70
3f6cb15
Sat, Mar 22, 2025  9:33:51 PM: 
 tests:  0|5
total_score: 0/70
b5cc250
Sat, Mar 22, 2025 10:09:56 PM: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
9f82f5e
Sat, Mar 22, 2025 10:29:05 PM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|2
total_score: 40/70
f41a661
Sat, Mar 22, 2025 10:32:54 PM: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:97:4: error: unknown type name 'Pila'
   97 |    Pila* pila_Aux = crea_pila();
      |    ^~~~
exercises.c:97:21: error: implicit declaration of function 'crea_pila'; did you mean 'copia_pila'? [-Wimplicit-function-declaration]
   97 |    Pila* pila_Aux = crea_pila();
      |                     ^~~~~~~~~
      |                     copia_pila
exercises.c:97:21: error: initialization of 'int *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
exercises.c:99:18: error: comparison between pointer and integer [-Werror]
   99 |    while(top(P1) != -1){
      |                  ^~
exercises.c:100:22: error: initialization of 'int' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
  100 |       int elemento = top(P1);
      |                      ^~~
exercises.c:101:12: error: passing argument 1 of 'push' from incompatible pointer type [-Wincompatible-pointer-types]
  101 |       push(pila_Aux, elemento);
      |            ^~~~~~~~
      |            |
      |            int *
In file included from exercises.c:7:
stack.h:11:18: note: expected 'Stack *' {aka 'List *'} but argument is of type 'int *'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |           ~~~~~~~^~~~~
exercises.c:101:22: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  101 |       push(pila_Aux, elemento);
      |                      ^~~~~~~~
      |                      |
      |                      int
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:104:14: error: passing argument 1 of 'top' from incompatible pointer type [-Wincompatible-pointer-types]
  104 |    while(top(pila_Aux) != -1){
      |              ^~~~~~~~
      |              |
      |              int *
stack.h:14:18: note: expected 'Stack *' {aka 'List *'} but argument is of type 'int *'
   14 | void *top(Stack *stack) { return first(stack); }
      |           ~~~~~~~^~~~~
exercises.c:104:24: error: comparison between pointer and integer [-Werror]
  104 |    while(top(pila_Aux) != -1){
      |                        ^~
exercises.c:105:26: error: passing argument 1 of 'top' from incompatible pointer type [-Wincompatible-pointer-types]
  105 |       int elemento = top(pila_Aux);
      |                          ^~~~~~~~
      |                          |
      |                          int *
stack.h:14:18: note: expected 'Stack *' {aka 'List *'} but argument is of type 'int *'
   14 | void *top(Stack *stack) { return first(stack); }
      |           ~~~~~~~^~~~~
exercises.c:105:22: error: initialization of 'int' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
  105 |       int elemento = top(pila_Aux);
      |                      ^~~
exercises.c:106:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  106 |       push(P1, elemento);
      |                ^~~~~~~~
      |                |
      |                int
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:107:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  107 |       push(P2, elemento);
      |                ^~~~~~~~
      |                |
      |                int
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:108:11: error: passing argument 1 of 'pop' from incompatible pointer type [-Wincompatible-pointer-types]
  108 |       pop(pila_Aux);
      |           ^~~~~~~~
      |           |
      |           int *
stack.h:17:18: note: expected 'Stack *' {aka 'List *'} but argument is of type 'int *'
   17 | void *pop(Stack *stack) { return popFront(stack); }
      |           ~~~~~~~^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4a24ae4
Sat, Mar 22, 2025 10:34:23 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:97:22: error: implicit declaration of function 'crea_pila'; did you mean 'copia_pila'? [-Wimplicit-function-declaration]
   97 |    Stack* pila_Aux = crea_pila();
      |                      ^~~~~~~~~
      |                      copia_pila
exercises.c:97:22: error: initialization of 'Stack *' {aka 'List *'} from 'int' makes pointer from integer without a cast [-Wint-conversion]
exercises.c:99:18: error: comparison between pointer and integer [-Werror]
   99 |    while(top(P1) != -1){
      |                  ^~
exercises.c:100:22: error: initialization of 'int' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
  100 |       int elemento = top(P1);
      |                      ^~~
exercises.c:101:22: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  101 |       push(pila_Aux, elemento);
      |                      ^~~~~~~~
      |                      |
      |                      int
In file included from exercises.c:7:
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:104:24: error: comparison between pointer and integer [-Werror]
  104 |    while(top(pila_Aux) != -1){
      |                        ^~
exercises.c:105:22: error: initialization of 'int' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
  105 |       int elemento = top(pila_Aux);
      |                      ^~~
exercises.c:106:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  106 |       push(P1, elemento);
      |                ^~~~~~~~
      |                |
      |                int
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:107:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  107 |       push(P2, elemento);
      |                ^~~~~~~~
      |                |
      |                int
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
40a080d
Sat, Mar 22, 2025 10:37:51 PM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:98:18: error: comparison between pointer and integer [-Werror]
   98 |    while(top(P1) != -1){
      |                  ^~
exercises.c:99:22: error: initialization of 'int' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
   99 |       int elemento = top(P1);
      |                      ^~~
exercises.c:100:22: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  100 |       push(pila_Aux, elemento);
      |                      ^~~~~~~~
      |                      |
      |                      int
In file included from exercises.c:7:
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:103:24: error: comparison between pointer and integer [-Werror]
  103 |    while(top(pila_Aux) != -1){
      |                        ^~
exercises.c:104:22: error: initialization of 'int' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
  104 |       int elemento = top(pila_Aux);
      |                      ^~~
exercises.c:105:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  105 |       push(P1, elemento);
      |                ^~~~~~~~
      |                |
      |                int
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:106:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Wint-conversion]
  106 |       push(P2, elemento);
      |                ^~~~~~~~
      |                |
      |                int
stack.h:11:31: note: expected 'void *' but argument is of type 'int'
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
543720f
